# HardwareInLoop_DesktopReactor

./: README.md
firmware/: CMakeLists.txt  main.c
host/: host_driver.py
validation/: test_telemetry.py
